--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sass": "^1.77.8"
   },
   "devDependencies": {
+    "json-server": "^1.0.0-beta.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
