--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "node server.js",
     "dev": "next dev",
     "build": "next build",
-    "lint": "next lint",
-    "serve": "json-server db.json --port 4000"
+    "lint": "next lint"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
@@ -24,12 +23,12 @@
     "sass": "^1.77.8"
   },
   "devDependencies": {
-    "json-server": "^1.0.0-beta.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "json-server": "^1.0.0-beta.2",
     "typescript": "^5"
   },
   "main": "index.js",
