--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node server.js",
+    "start": "next start",
+    "serve": "json-server db.json --port 4000",
     "dev": "next dev",
     "build": "next build",
     "lint": "next lint"
@@ -17,7 +18,6 @@
     "@tanstack/react-query": "^5.52.0",
     "cors": "^2.8.5",
     "json-serve": "^0.1.0",
-    "json-server": "^1.0.0-beta.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
@@ -30,7 +30,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
-    "json-server": "^1.0.0-beta.2",
+    "json-server": "^0.17.4",
     "typescript": "^5"
   },
   "main": "index.js",
